--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "byteshop-ui",
+  "name": "byte-shop-ui",
   "version": "0.1.0",
   "private": true,
   "license": "Open BSV License",
@@ -8,7 +8,7 @@
     "@babbage/sdk": "^0.3.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "byteshop-publisher": "^0.1.6",
+    "authrite-js": "^0.1.12",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
@@ -34,6 +34,6 @@
     ]
   },
   "devDependencies": {
-    "standard": "^14.3.4"
+    "standard": "^17.0.0"
   }
 }
