--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "authrite-js": "^0.2.1",
+    "babbage-bsv": "^0.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
