--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@babbage/sdk": "^0.4.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "authrite-js": "^0.2.6",
+    "authrite-js": "^0.2.14",
+    "authrite-utils": "^0.1.15",
     "babbage-bsv": "^0.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
